--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,12 @@ trigger:
 - master
 
 pool:
-  name: TekTutor_Linux_Agent_Pool
+  name: default
 
 variables:
 - name: JAVA_HOME_8_X64
-  value: /usr/lib/jvm/java-8-openjdk-amd64
-- name: M2_HOME
+  value: 
+- name: M2_HOME/usr/lib/jvm/java-11-openjdk-amd64
   value: /usr/share/maven
 
 steps:
