--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ pool:
 
 variables:
 - name: JAVA_HOME_8_X64
-  value: 
-- name: M2_HOME/usr/lib/jvm/java-11-openjdk-amd64
+  value: /usr/lib/jvm/java-11-openjdk-amd64
+- name: M2_HOME
   value: /usr/share/maven
 
 steps:
